Fix Issues with Revision 01

--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
                     <p>
                         Real-time count for Instagram followers and media statistics
                     </p>
-
                     <form action="#" class="checkform row mt-4 fade-up-animation">
-                        <div class="col-lg-9">
-                            <input type="text" class="form-control" placeholder="Type any instagram username or hashtag">
-                        </div>
-                        <div class="col-lg-3">
-                            <button type="submit" class="btn btn-primary-gradient btn-block">Check</button>
+                        <div class="col-12">
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Type any instagram username or hashtag">
+                                <div class="input-group-append">
+                                    <button class="btn btn-primary-gradient" type="submit" id="checbButton">Go</button>
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -139,7 +140,7 @@
                         <div class="input-group mb-3">
                             <input type="text" class="form-control" placeholder="Type any instagram username or hashtag">
                             <div class="input-group-append">
-                                <button class="btn btn-primary-gradient" type="submit" id="button-addon2">Go</button>
+                                <button class="btn btn-primary-gradient" type="submit" id="checkButton2">Go</button>
                             </div>
                         </div>
                     </form>
